# mars-landing-sdl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  command.txt  draw.c  draw.h  dynamics.c  dynamics.h  game.c  linux_sdl_gl.sup  main.c  sdl_utils.c  state_list.c
include/marslanding/: draw.h  dynamics.h  game.h
src/: draw.c  dynamics.c  game.c  main.c  sdl_utils.c  state_list.c
